src/styles/Graphiql.module.scss
@use '@/styles/variables/colors';
@use '@/styles/mixins/elements-style.scss';
@use '@/styles/variables/z-index';

.main {
  display: grid;
  gap: 20px;
  grid-template-areas: 'doc request response';
  grid-template-columns: repeat(3, 1fr);
  justify-content: space-between;
  height: 100%;
  color: colors.$gray-blue;
  background-color: colors.$super-light-gray;
  position: relative;
  padding: 0 10px;

  @media screen and (max-width: 800px) {
    padding-right: 15px;
  }

  &__documentation {
    grid-area: doc;
    position: relative;
    margin-bottom: 40px;
  }

  &__request {
    @include elements-style.flex-column;
    background-color: colors.$white;
    margin-top: 30px;
    margin-bottom: 40px;
    grid-area: request;

    @media screen and (max-width: 800px) {
      margin-bottom: 0;
    }
  }

  &__response {
    @include elements-style.flex-column;
    margin-top: 30px;
    margin-bottom: 40px;
    grid-area: response;
    background-color: colors.$white;
    min-height: 100px;
  }

  &__openButton {
    @include elements-style.button-style-reset;
    transition: 0.3s;

    &:hover {
      cursor: pointer;
      transform: scale(1.1);
    }
  }
}

.section {
  border-radius: 10px;
}

.section:not(.main__request) {
  margin-top: 30px;
}

@media screen and (max-width: 1100px) {
  .main {
    grid-template-columns: auto 1fr 1fr;
  }
}

@media screen and (max-width: 800px) {
  .main {
    grid-template-columns: auto 1fr;
    grid-template-areas:
      'doc request'
      'doc response';
  }
}

